--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "dependencies": {},
     "devDependencies": {
+        "@types/node": "^20.2.5",
         "typescript": "^5.1.3"
     },
     "scripts": {
